[gd_scene load_steps=4 format=3 uid="uid://cl3v6vpkendb7"]

[ext_resource type="Script" path="res://Scripts/Components/quiz_component.gd" id="1_imaf0"]
[ext_resource type="Texture2D" uid="uid://d0bmxwadw21dp" path="res://Assets/Sprites/UI/Tickets.png" id="2_ur3mc"]
[ext_resource type="Texture2D" uid="uid://jiuvjcrn386l" path="res://Assets/Sprites/UI/TicketsKosong.png" id="3_ky4f3"]

[node name="QuizComponent" type="Node"]
script = ExtResource("1_imaf0")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
metadata/_edit_use_anchors_ = true

[node name="Tickets1" type="Sprite2D" parent="CanvasLayer/Control"]
visible = false
position = Vector2(176, 96)
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_ur3mc")

[node name="Tickets2" type="Sprite2D" parent="CanvasLayer/Control"]
visible = false
position = Vector2(208, 96)
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_ur3mc")

[node name="Tickets3" type="Sprite2D" parent="CanvasLayer/Control"]
visible = false
position = Vector2(240, 96)
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_ur3mc")

[node name="Tickets4" type="Sprite2D" parent="CanvasLayer/Control"]
visible = false
position = Vector2(272, 96)
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_ur3mc")

[node name="Tickets5" type="Sprite2D" parent="CanvasLayer/Control"]
visible = false
position = Vector2(304, 96)
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_ur3mc")

[node name="TicketsKosong1" type="Sprite2D" parent="CanvasLayer/Control"]
visible = false
position = Vector2(176, 96)
scale = Vector2(0.7, 0.7)
texture = ExtResource("3_ky4f3")

[node name="TicketsKosong2" type="Sprite2D" parent="CanvasLayer/Control"]
visible = false
position = Vector2(208, 96)
scale = Vector2(0.7, 0.7)
texture = ExtResource("3_ky4f3")

[node name="TicketsKosong3" type="Sprite2D" parent="CanvasLayer/Control"]
visible = false
position = Vector2(240, 96)
scale = Vector2(0.7, 0.7)
texture = ExtResource("3_ky4f3")

[node name="TicketsKosong4" type="Sprite2D" parent="CanvasLayer/Control"]
visible = false
position = Vector2(272, 96)
scale = Vector2(0.7, 0.7)
texture = ExtResource("3_ky4f3")

[node name="TicketsKosong5" type="Sprite2D" parent="CanvasLayer/Control"]
visible = false
position = Vector2(304, 96)
scale = Vector2(0.7, 0.7)
texture = ExtResource("3_ky4f3")
